@@ -160,34 +160,34 @@ public class Scheme extends LispLanguage
       defProcStFld("set-car!", "kawa.lib.lists");
       defProcStFld("set-cdr!", "kawa.lib.lists");
 
-      define_proc ("caar", "kawa.standard.cxr");
-      define_proc ("cadr", "kawa.standard.cxr");
-      define_proc ("cdar", "kawa.standard.cxr");
-      define_proc ("cddr", "kawa.standard.cxr");
-      define_proc ("caaar", "kawa.standard.cxr");
-      define_proc ("caadr", "kawa.standard.cxr");
-      define_proc ("cadar", "kawa.standard.cxr");
-      define_proc ("caddr", "kawa.standard.cxr");
-      define_proc ("cdaar", "kawa.standard.cxr");
-      define_proc ("cdadr", "kawa.standard.cxr");
-      define_proc ("cddar", "kawa.standard.cxr");
-      define_proc ("cdddr", "kawa.standard.cxr");
-      define_proc ("caaaar", "kawa.standard.cxr");
-      define_proc ("caaadr", "kawa.standard.cxr");
-      define_proc ("caadar", "kawa.standard.cxr");
-      define_proc ("caaddr", "kawa.standard.cxr");
-      define_proc ("cadaar", "kawa.standard.cxr");
-      define_proc ("cadadr", "kawa.standard.cxr");
-      define_proc ("caddar", "kawa.standard.cxr");
-      define_proc ("cadddr", "kawa.standard.cxr");
-      define_proc ("cdaaar", "kawa.standard.cxr");
-      define_proc ("cdaadr", "kawa.standard.cxr");
-      define_proc ("cdadar", "kawa.standard.cxr");
-      define_proc ("cdaddr", "kawa.standard.cxr");
-      define_proc ("cddaar", "kawa.standard.cxr");
-      define_proc ("cddadr", "kawa.standard.cxr");
-      define_proc ("cdddar", "kawa.standard.cxr");
-      define_proc ("cddddr", "kawa.standard.cxr");
+      defProcStFld("caar", "kawa.standard.cxr");
+      defProcStFld("cadr", "kawa.standard.cxr");
+      defProcStFld("cdar", "kawa.standard.cxr");
+      defProcStFld("cddr", "kawa.standard.cxr");
+      defProcStFld("caaar", "kawa.standard.cxr");
+      defProcStFld("caadr", "kawa.standard.cxr");
+      defProcStFld("cadar", "kawa.standard.cxr");
+      defProcStFld("caddr", "kawa.standard.cxr");
+      defProcStFld("cdaar", "kawa.standard.cxr");
+      defProcStFld("cdadr", "kawa.standard.cxr");
+      defProcStFld("cddar", "kawa.standard.cxr");
+      defProcStFld("cdddr", "kawa.standard.cxr");
+      defProcStFld("caaaar", "kawa.standard.cxr");
+      defProcStFld("caaadr", "kawa.standard.cxr");
+      defProcStFld("caadar", "kawa.standard.cxr");
+      defProcStFld("caaddr", "kawa.standard.cxr");
+      defProcStFld("cadaar", "kawa.standard.cxr");
+      defProcStFld("cadadr", "kawa.standard.cxr");
+      defProcStFld("caddar", "kawa.standard.cxr");
+      defProcStFld("cadddr", "kawa.standard.cxr");
+      defProcStFld("cdaaar", "kawa.standard.cxr");
+      defProcStFld("cdaadr", "kawa.standard.cxr");
+      defProcStFld("cdadar", "kawa.standard.cxr");
+      defProcStFld("cdaddr", "kawa.standard.cxr");
+      defProcStFld("cddaar", "kawa.standard.cxr");
+      defProcStFld("cddadr", "kawa.standard.cxr");
+      defProcStFld("cdddar", "kawa.standard.cxr");
+      defProcStFld("cddddr", "kawa.standard.cxr");
       defProcStFld("null?", "kawa.lib.lists");
       defProcStFld("list?", "kawa.lib.lists");
       defProcStFld("list", "gnu.kawa.functions.MakeList");
